--- a/contact/index.html
+++ b/contact/index.html
@@ -89,7 +89,7 @@
                 <h1 id="get-in-touch">Get in Touch</h1>
 <p><i class="fa fa-envelope"></i> <a href="mailto: rob.m.hen@gmail.com">rob.m.hen@gmail.com</a><br>
 <i class="fa fa-linkedin" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/robyn-henry-6a433172/">My LinkedIn</a><br>
-<i class="fa fa-github"></i> <a href="https://github.com/robMhen">My GitHub</a>
+<i class="fa fa-github"></i> <a href="https://github.com/robMhen">My GitHub</a><br>
 <i class="fa fa-home"></i> Sterling, VA, USA</p>
               
             </div>
