Spelling and grammar fixes

--- a/getting started/index.html
+++ b/getting started/index.html
@@ -129,12 +129,12 @@
 <p><img alt="Generator" src="../generator.png" /></p>
 <p>Click <strong>Select</strong>, and your password or passphrase will populate the Password field in the Add Item form. Click <strong>Save</strong> to save your changes.</p>
 <h2 id="using-the-auto-fill-feature">Using the Auto-fill Feature</h2>
-<p>If you have added login credentials for a website to your Bitwarden Vault, you have the option to let Birtwarden auto-fill your credentials for you.</p>
+<p>If you have added login credentials for a website to your Bitwarden Vault, you have the option to let Bitwarden auto-fill your credentials for you.</p>
 <p>Click the Bitwarden logo <img alt="Bitwarden logo" src="../icon128.png" width="30" /> in your browser's toolbar to verify you are logged in.</p>
 <p>Navigate to the website you need to log in to.</p>
 <p>If you have added login credentials for the website, a number will appear over the logo showing the number of credentials you have saved for that website.</p>
 <p><img alt="Logins available" height="50" src="../login_available.png" /></p>
-<p>Click the Bitwarden logo and select the item listed under Logins. Your credentials will autopopulate in the Username and Password fields on the website.</p>
+<p>Click the Bitwarden logo and select the item listed under Logins. Your credentials will auto populate in the Username and Password fields on the website.</p>
 <p>You can also right-click inside of the Username or Password field on the website, hover your mouse over Bitwarden, hover your mouse over Auto-fill, and select your credentials.</p>
 <p><img alt="Autofill with right-click" src="../right_click.png" /></p>
               
