--- a/about/index.html
+++ b/about/index.html
@@ -132,15 +132,14 @@
 <ul>
 <li>Update Knowledge Management SOPs.</li>
 <li>Provide documentation and evidence for systems going through the Authorization to Operate (ATO) process.</li>
-<li>Complete weekly and monthly report deliverables.</li>
-<li>Managed document library in SharePoint.</li>
+<li>Manage document library in SharePoint.</li>
 </ul>
 <h3 id="associate-technical-editorwriter-dynamis-inc-january-2020-september-2021"><strong>Associate Technical Editor/Writer | Dynamis, Inc. (January 2020-September 2021)</strong></h3>
 <h4 id="dhs-office-of-biometrics-and-identity-management-obim-june-2021-august-2021">DHS Office of Biometrics and Identity Management (OBIM) (June 2021-August 2021)</h4>
 <ul>
-<li>Wrote new and edited existing internal SOPs for the Internal Controls Business and Finance Office.</li>
+<li>Wrote and editedSOPs for the Internal Controls Business and Finance Office.</li>
 </ul>
-<h4 id="us-mint-june-2020-september-2021">U.S. Mint (June 2020-September 2021)</h4>
+<h4 id="us-mint-june-2020-september-2021">US Mint Manufacturing (June 2020-September 2021)</h4>
 <ul>
 <li>Created a style guide to standardize documents published to U.S. Mint Manufacturing’s document repository.</li>
 <li>Updated over 150 documents for 4 manufacturing divisions.</li>
@@ -153,31 +152,28 @@
 </ul>
 <h4 id="dhs-ice-student-and-exchange-visitor-program-sevp-january-2020-may-2020">DHS ICE Student and Exchange Visitor Program (SEVP) (January 2020-May 2020)</h4>
 <ul>
-<li>Wrote new and edited existing internal SOPs for departments within the SEVP.</li>
-<li>Compiled and edited daily, weekly, and monthly report deliverables.</li>
+<li>Wrote and edited SOPs for departments within the SEVP.</li>
+<li>Completed daily, weekly, and monthly report deliverables.</li>
 <li>Managed document library in SharePoint.</li>
 </ul>
 <h3 id="help-desk-clerk-mba-csi-june-2015-janurary-2020"><strong>Help Desk Clerk | MBA CSi (June 2015-Janurary 2020)</strong></h3>
 <h4 id="usps-research-and-engineering-hq">USPS Research and Engineering HQ</h4>
 <ul>
 <li>Served as the primary point of contact for all administrative and technical support issues for more than 300 employees and contractors in 2 buildings.</li>
-<li>Communicated technical information to users with varying degrees of technical skill via email, telephone, and in person.</li>
-<li>Wrote and distributed memorandums at the direction of upper management.</li>
-<li>Created, updated, and processed administrative forms.</li>
 </ul>
 <h3 id="customer-solutions-specialist-i-hobsons-june-2014-june-2015"><strong>Customer Solutions Specialist I | Hobsons (June 2014-June 2015)</strong></h3>
 <ul>
-<li>Provided Tier 1 support for end-users via email and telephone, and assisted Tier 2 support as needed. Maintained top productivity score within Customer Support, resolving an average of 90 new tickets daily during peak season. </li>
-<li>Created new and updated existing knowledge base articles for end-users.</li>
+<li>Provided customer support via email and telephone and assisted Tier 2 support as needed. Maintained top productivity score within Customer Support, resolving an average of 90 new tickets daily during peak season. </li>
+<li>Created new and updated existing customer-facing help articles.</li>
 <li>Coordinated with the Development Team on replicating and troubleshooting bug reports.</li>
 </ul>
 <h3 id="customer-support-associate-lastpass-august-2013-april-2014"><strong>Customer Support Associate | LastPass (August 2013-April 2014)</strong></h3>
 <ul>
-<li>Provided Tier 1 support for individual and enterprise end-users via email and scheduled web conferencing via GoToMeeting.</li>
+<li>Provided support for individual and enterprise customers via email and web conferencing via GoToMeeting.</li>
 <li>Coordinated with the Development Team on replicating and troubleshooting bug reports.</li>
-<li>Created new and updated existing knowledge base articles for end-users.
-<br></li>
+<li>Created new and updated existing customer-facing help articles.</li>
 </ul>
+<br>
 <hr />
 <h2 id="education-and-training">Education and Training</h2>
 <p><strong>Northern Virginia Community College</strong> (2019)<br>
@@ -191,20 +187,28 @@ Psychology, B.S.
 <br><hr /></p>
 <h2 id="skills">Skills</h2>
 <ul>
-<li>AP, APA, and GPO Style Guides</li>
-<li>Microsoft 365</li>
+<li>Style Guides:</li>
+  <ul>
+    <li>AP</li>
+    <li>APA</li>
+    <li>GPO</li>
+    <li>Microsoft Manual of Style</li>
+  </ul>
+<li>Microsoft Office</li>
 <li>Adobe Acrobat DC Pro</li>
-<li>Entry-level:<ul>
+<li>Google Docs</li>
 <li>GitHub</li>
-<li>GitHub Pages</li>
 <li>CLI</li>
 <li>HTML</li>
 <li>CSS</li>
 <li>Markdown</li>
 <li>Python</li>
 <li>MkDocs</li>
-</ul>
-</li>
+<li>Stoplight</li>
+<li>Postman</li>
+<li>Swagger</li>
+<li>Techsmith Capture</li>
+<li>Visual Studio Code</li>
 </ul>
               
             </div>
