Resume minor fixes

--- a/about/index.html
+++ b/about/index.html
@@ -137,11 +137,11 @@
 <h3 id="associate-technical-editorwriter-dynamis-inc-january-2020-september-2021"><strong>Associate Technical Editor/Writer | Dynamis, Inc. (January 2020-September 2021)</strong></h3>
 <h4 id="dhs-office-of-biometrics-and-identity-management-obim-june-2021-august-2021">DHS Office of Biometrics and Identity Management (OBIM) (June 2021-August 2021)</h4>
 <ul>
-<li>Wrote and editedSOPs for the Internal Controls Business and Finance Office.</li>
+<li>Wrote and edited SOPs for the Internal Controls Business and Finance Office.</li>
 </ul>
 <h4 id="us-mint-june-2020-september-2021">US Mint Manufacturing (June 2020-September 2021)</h4>
 <ul>
-<li>Created a style guide to standardize documents published to U.S. Mint Manufacturing’s document repository.</li>
+<li>Created a style guide to standardize documents published to US Mint Manufacturing’s document repository.</li>
 <li>Updated over 150 documents for 4 manufacturing divisions.</li>
 <li>Remediated all published documents for Section 508 compliance.</li>
 <li>Managed document library in SharePoint.</li>
@@ -187,13 +187,13 @@ Psychology, B.S.
 <br><hr /></p>
 <h2 id="skills">Skills</h2>
 <ul>
-<li>Style Guides:</li>
+<li>Style Guides:
   <ul>
     <li>AP</li>
     <li>APA</li>
     <li>GPO</li>
     <li>Microsoft Manual of Style</li>
-  </ul>
+  </ul></li>
 <li>Microsoft Office</li>
 <li>Adobe Acrobat DC Pro</li>
 <li>Google Docs</li>
