--- a/about/index.html
+++ b/about/index.html
@@ -169,7 +169,7 @@
 </ul>
 <h3 id="customer-support-associate-lastpass-august-2013-april-2014"><strong>Customer Support Associate | LastPass (August 2013-April 2014)</strong></h3>
 <ul>
-<li>Provided support for individual and enterprise customers via email and web conferencing via GoToMeeting.</li>
+<li>Provided support for individual and enterprise customers via email and web conferencing.</li>
 <li>Coordinated with the Development Team on replicating and troubleshooting bug reports.</li>
 <li>Created new and updated existing customer-facing help articles.</li>
 </ul>
