Writing Samples overview changes

--- a/Writing Samples/index.html
+++ b/Writing Samples/index.html
@@ -88,8 +88,8 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="overview">Overview</h1>
-<p>Here you will find some samples of my writing. Please follow the links below or use the navigation links to view my writing samples.</p>
-<p>The samples provided are based on products or apps I regularly use. I am unable to provide samples of my professional work without violating confidentiality agreements. Please <a href="../contact/">contact me</a> if you have any questions.</p>
+<p>Here you will find some samples of my writing. Please follow the links below or use the links in the navigation bar to view each document.</p>
+<p>I am unable to provide samples of my professional work without violating confidentiality agreements. Each document is an example based on a product or app I personally use. Please <a href="../contact/">contact me</a> if you have any questions.</p>
 <hr />
 <p><a href="../getting%20started/">Getting Started</a><br>
 <a href="../installation/">Installation Guide</a></p>
