--- a/getting started/index.html
+++ b/getting started/index.html
@@ -102,39 +102,39 @@
                 <h1 id="getting-started">Getting Started</h1>
 <p><br></p>
 <h2 id="overview">Overview</h2>
-<p>This guide walks through the process of getting started with the password manager <a href="https://bitwarden.com/">Bitwarden</a>. At the end of this guide, users will have installed the Bitwarden extension in a supported browser, created an account, added login credentials to their vault, generated a secure password, and used the autofill feature.
+<p>This guide walks through the process of getting started with the password manager <a href="https://bitwarden.com/">Bitwarden</a>. At the end of this guide, customers will have installed the Bitwarden extension in a supported browser, created an account, added login credentials to their vault, generated a secure password, and used the autofill feature.
 <br></p>
 <h2 id="installing-bitwarden">Installing Bitwarden</h2>
-<p>Bitwarden is available to install as a desktop application, browser extension, and mobile app. Bitwarden browser extensions are supported for Google Chrome, Mozilla Firefox, Microsoft Edge, Safari, Brave, Opera, Tor, and Vivaldi. Download the Bitwarden browser extension from your browser's app store or marketplace, or from the <a href="https://bitwarden.com/download/">Bitwarden Downloads</a> page.</p>
+<p>Bitwarden is available to install as a desktop application, browser extension, and mobile app. Bitwarden browser extensions are supported for <strong>Google Chrome</strong>, <strong>Mozilla Firefox</strong>, <strong>Microsoft Edge</strong>, <strong>Safari</strong>, <strong>Brave</strong>, <strong>Opera</strong>, <strong>Tor</strong>, and <strong>Vivaldi</strong>. Download the Bitwarden browser extension from your browser's app store or marketplace, or from the <a href="https://bitwarden.com/download/">Bitwarden Downloads</a> page.</p>
 <p>Browser requirements and detailed instructions for installing Bitwarden can be found in the <a href="../installation/">Installation Guide</a>.</p>
 <h2 id="creating-an-account">Creating an Account</h2>
-<p>Click the Bitwarden logo <img alt="Bitwarden logo" src="../icon128_gray.png" width="30" /> in your browser's toolbar and click <strong>Create Account</strong>.</p>
+<p>Click the <strong>Bitwarden logo</strong> <img alt="Bitwarden logo" src="../icon128_gray.png" width="30" /> in your browser's toolbar and click <strong>Create Account</strong>.</p>
 <p><img alt="Bitwarden Create Account" src="../bitwarden_create_account1.png" /></p>
-<p>Enter your email address, master password, and a hint to help recover your master password (optional, but recommended). Your master password is what you will use to log in to Bitwarden and access your Bitwarden Vault. </p>
+<p>Enter your <strong>email address</strong>, <strong>master password</strong>, and a <strong>hint</strong> to help recover your master password (optional, but recommended). Your master password is what you will use to log in to Bitwarden and access your Bitwarden Vault. </p>
 <div class="admonition warning">
 <p class="admonition-title">Warning</p>
-<p>Your master password cannot be recovered if forgotten, so it should be something secure but also easy to remember.</p>
+<p>Your master password cannot be recovered if forgotten, so it should be something secure but easy to remember.</p>
 </div>
 <p>Check the box to agree to the Terms of Service and Privacy Policy, then click <strong>Submit</strong>.</p>
 <h2 id="adding-credentials-to-the-vault">Adding Credentials to the Vault</h2>
-<p>Click the Bitwarden logo <img alt="Bitwarden logo" src="../icon128.png" width="30" /> in your browser's toolbar and click the plus <i class="fa fa-plus"></i> icon to Add an Item or click the link <strong>Add a Login</strong>.</p>
+<p>Click the <strong>Bitwarden logo</strong> <img alt="Bitwarden logo" src="../icon128.png" width="30" /> in your browser's toolbar and click the plus <i class="fa fa-plus"></i> icon to <strong>Add an Item</strong> or click the link <strong>Add a Login</strong>.</p>
 <p><img alt="Add a login" src="../add_login.png" /></p>
-<p>Complete the Name, Username, and Password fields and click <strong>Save</strong>.</p>
+<p>Complete the <strong>Name</strong>, <strong>Username</strong>, and <strong>Password</strong> fields and click <strong>Save</strong>.</p>
 <p><img alt="Add an item" src="../add_item.png" /></p>
 <h2 id="generating-passwords">Generating Passwords</h2>
 <p>When adding a login, you have the option to let Bitwarden generate a random, secure password for you.</p>
-<p>In the Password field, click the rotating arrows.</p>
+<p>In the Password field, click the <strong>rotating arrows</strong>.</p>
 <p><img alt="Generate password" src="../generate_password.png" /></p>
 <p>Use the available options to make your password or passphrase as complex as you'd like, and use the rotating arrows to generate new passwords or passphrases.</p>
 <p><img alt="Generator" src="../generator.png" /></p>
 <p>Click <strong>Select</strong>, and your password or passphrase will populate the Password field in the Add Item form. Click <strong>Save</strong> to save your changes.</p>
 <h2 id="using-the-auto-fill-feature">Using the Auto-fill Feature</h2>
 <p>If you have added login credentials for a website to your Bitwarden Vault, you have the option to let Bitwarden auto-fill your credentials for you.</p>
-<p>Click the Bitwarden logo <img alt="Bitwarden logo" src="../icon128.png" width="30" /> in your browser's toolbar to verify you are logged in.</p>
+<p>Click the <strong>Bitwarden logo</strong> <img alt="Bitwarden logo" src="../icon128.png" width="30" /> in your browser's toolbar to verify you are logged in.</p>
 <p>Navigate to the website you need to log in to.</p>
 <p>If you have added login credentials for the website, a number will appear over the logo showing the number of credentials you have saved for that website.</p>
 <p><img alt="Logins available" height="50" src="../login_available.png" /></p>
-<p>Click the Bitwarden logo and select the item listed under Logins. Your credentials will auto populate in the Username and Password fields on the website.</p>
+<p>Click the <strong>Bitwarden logo</strong> and select the item listed under Logins. Your credentials will auto populate in the Username and Password fields on the website.</p>
 <p>You can also right-click inside of the Username or Password field on the website, hover your mouse over Bitwarden, hover your mouse over Auto-fill, and select your credentials.</p>
 <p><img alt="Autofill with right-click" src="../right_click.png" /></p>
               
