Users to customers in installation guide overview

--- a/installation/index.html
+++ b/installation/index.html
@@ -108,7 +108,7 @@
                 <h1 id="installation-guide">Installation Guide</h1>
 <p><br></p>
 <h2 id="overview">Overview</h2>
-<p>This guide walks through the process of installing the Bitwarden browser extension in all of its supported browsers. At the end of this guide, users will understand which browsers are supported, the minimum browser requirements, and have installed the Bitwarden browser extension.</p>
+<p>This guide walks through the process of installing the Bitwarden browser extension in all of its supported browsers. At the end of this guide, customers will understand which browsers are supported, the minimum browser requirements, and have installed the Bitwarden browser extension.</p>
 <h2 id="supported-browsers">Supported Browsers</h2>
 <p>The Bitwarden browser extension is supported in the following browsers:  </p>
 <ul>
