Added photo, updated landing page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="welcome-to-my-portfolio">Welcome to my portfolio</h1>
-<p>Hi, I'm Robyn. I am a Technical Writer with 2-3 years of experience creating documents for clients in the Federal Government. This site includes a copy of my resume and some brief samples of my writing. I enjoy learning new products and skills, and using my knowledge and communication skills to help others accomplish their goals.</p>
+<p>Hi, I'm Robyn. I am a Technical Writer with 2-3 years of experience creating documents for clients in the Federal Government. This site includes a copy of my resume and some brief samples of my writing. I enjoy learning new products and skills, and using my knowledge and communication skills to help others accomplish their goals. <img src="Badge Pic.jpg" alt="My photo" style="float:right"></p>
               
             </div>
           </div><footer>
